# Otus

./: .gitmodules  .travis.yml  Doxyfile  Doxyfile5
Homework10/: CMakeLists.txt  block.cpp  block.h  bulkqueue.h  main.cpp  printer.cpp  printer.h  thread.cpp  thread.h  threadpool.cpp  threadpool.h
Homework11/: CMakeLists.txt  async.cpp  async.h  block.cpp  block.h  context.cpp  context.h  main.cpp  printer.cpp  printer.h
Homework2/: .travis.yml  CMakeLists.txt  ip_filter.cpp  main.cpp
Homework3/: CMakeLists.txt  main.cpp  my_allocator.h  my_container.h
Homework4/: CMakeLists.txt  main.cpp  print.h  type_check.h
Homework5/: .travis.yml  CMakeLists.txt  header.h  main.cpp
Homework6/: CMakeLists.txt  convert.h  element.h  internlayers.h  main.cpp  matrix.h
Homework7/: CMakeLists.txt  block.cpp  block.h  main.cpp  printer.cpp  printer.h
doc/: Doxyfile
html/: class_document.html  class_graphic_element.html  class_line-members.html  class_square-members.html  class_triangle.html  class_triangle__coll__graph.md5  inherit_graph_2.map  main_8cpp.html  main_8cpp__incl.map  version_8h.html  version_8h_source.html
hw4_html/: annotated.html  classes.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  print_8h.html  print_8h__dep__incl.map  print_8h__dep__incl.md5  print_8h__incl.map  print_8h__incl.md5  print_8h_source.html  struct_same_type_check-members.html  struct_same_type_check.html  (+14 more)
(+87 files in other folders)
